fix: create profile

--- a/ui/styles/globals.css
+++ b/ui/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Alkatra&family=Great+Vibes&family=Josefin+Sans:wght@300;700&family=Jost:wght@100;700&family=Shadows+Into+Light&family=Bebas+Neue&display=swap");
 @import "tailwindcss";
 @import "./typographys.css";
 @import "./loaders.css";
